<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/name_text"

            style="@style/NameStyle"
            android:text="@string/name_text" />

        <EditText
            android:id="@+id/nickname_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/what_u_name"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/what_u_name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:onClick="clickHandlerFunction"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/done"
            app:rippleColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/nickName_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:padding="@dimen/small_padding"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/avatar_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:contentDescription="@string/avatar"
            tools:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:id="@+id/bio_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bio_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="@dimen/small_padding"
                    android:paddingLeft="@dimen/layout_margin"
                    android:paddingRight="@dimen/layout_margin"
                    android:text="@string/bio"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>